--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://hexiao-o@github.com/hexiao-o/yunle-template-vue.git",
+  "license": "MIT"
 }
